--- a/website/index.html
+++ b/website/index.html
@@ -9,20 +9,19 @@
       margin: 0;
       padding: 0;
       background-color: white;
-      display: flex;
-      justify-content: center;
-      align-items: flex-start;
-      height: 100vh;
       font-family: sans-serif;
     }
 
     .logo-container {
-      margin-top: 40px;
+      width: 100%;
+      text-align: center;
+      padding-top: 10px; /* Closest it can be to the top */
     }
 
     .logo-container img {
-      width: 250px;
+      width: 500px;  /* Make this as big as needed */
       max-width: 90%;
+      height: auto;
     }
   </style>
 </head>
