--- a/website/index.html
+++ b/website/index.html
@@ -15,11 +15,12 @@
     .logo-container {
       width: 100%;
       text-align: center;
-      padding-top: 10px; /* Closest it can be to the top */
+      margin-top: 0;
+      padding-top: 5px; /* Minimum top padding */
     }
 
     .logo-container img {
-      width: 500px;  /* Make this as big as needed */
+      width: 300px; /* Medium size between large and small */
       max-width: 90%;
       height: auto;
     }
