--- a/website/index.html
+++ b/website/index.html
@@ -15,12 +15,11 @@
     .logo-container {
       width: 100%;
       text-align: center;
-      margin-top: 0;
-      padding-top: 5px; /* Minimum top padding */
+      margin-top: 10px; /* Slightly lower than before */
     }
 
     .logo-container img {
-      width: 300px; /* Medium size between large and small */
+      width: 300px;
       max-width: 90%;
       height: auto;
     }
