--- a/website/index.html
+++ b/website/index.html
@@ -89,10 +89,10 @@
   <!-- Top Section with Logo and Menu Icon -->
   <div class="top-container">
     <div class="menu-icon" onclick="toggleMenu()">
-      <img src="menu-icon.png" alt="Menu Icon" />
+      <img src="https://github.com/mattscianna/mattscianna/blob/main/MENU.png?raw=true" alt="Menu Icon" />
     </div>
     <div class="logo-container">
-      <img src="your-logo.png" alt="Matt Scianna Logo" />
+      <img src="https://github.com/mattscianna/mattscianna/blob/main/MATTSCIANNA.png?raw=true" alt="Matt Scianna Logo" />
     </div>
   </div>
 
