--- a/website/index.html
+++ b/website/index.html
@@ -22,21 +22,17 @@
       position: relative;
     }
 
-    .logo-container {
-      text-align: center;
-    }
-
     .logo-container img {
-      width: 220px;  /* the size you were happy with earlier */
+      width: 220px;
       height: auto;
     }
 
     .menu-icon {
       position: absolute;
-      right: calc(50% + 150px); /* near logo */
+      left: calc(25% - 20px); /* roughly halfway between left and logo */
       top: 50%;
       transform: translateY(-50%);
-      width: 220px; /* same as logo box */
+      width: 40px;
       height: auto;
       cursor: pointer;
     }
