--- a/website/index.html
+++ b/website/index.html
@@ -20,8 +20,9 @@
     }
 
     .logo {
+      width: 100%;
+      text-align: center;
       margin-top: 20px;
-      height: 80px; /* original size you liked */
       cursor: pointer;
     }
 
