--- a/website/index.html
+++ b/website/index.html
@@ -20,15 +20,14 @@
     }
 
     .logo {
-      width: 100%;
-      text-align: center;
       margin-top: 20px;
+      height: 80px; /* restored original size */
       cursor: pointer;
     }
 
     .menu-icon {
       position: absolute;
-      left: 100px; /* moved more to the right */
+      left: 60px; /* moved slightly closer to the logo */
       top: 50%;
       transform: translateY(-50%);
       width: 40px;
