--- a/website/index.html
+++ b/website/index.html
@@ -13,7 +13,7 @@
 
     .header {
       position: relative;
-      height: 120px;
+      height: 100px;
       display: flex;
       align-items: center;
       justify-content: center;
@@ -21,13 +21,13 @@
 
     .logo {
       margin-top: 20px;
-      height: 80px; /* restored original size */
+      height: 60px; /* smaller logo */
       cursor: pointer;
     }
 
     .menu-icon {
       position: absolute;
-      left: 60px; /* moved slightly closer to the logo */
+      left: 120px; /* moved more to the right */
       top: 50%;
       transform: translateY(-50%);
       width: 40px;
