--- a/index.html
+++ b/index.html
@@ -167,11 +167,13 @@
 </head>
 <body>
 
-  <!-- Logo -->
+<!-- Logo -->
+<a href=".">
   <img id="logo" src="https://github.com/mattscianna/mattscianna/blob/main/Copy_of_Logo_1-2-removebg-preview.png?raw=true" alt="Matt Scianna Logo">
+</a>
 
-  <h1>MATT SCIANNA</h1>
-  <h2>COMING SOON</h2>
+<h1>MATT SCIANNA</h1>
+<h2>COMING SOON</h2>
 
   <!-- SMS Form -->
   <div class="form-container">
