--- a/website/index.html
+++ b/website/index.html
@@ -21,7 +21,7 @@
 
     .logo {
       margin-top: 20px;
-      height: 60px; /* smaller logo */
+      height: 40px; /* smaller logo */
       cursor: pointer;
     }
 
@@ -75,8 +75,8 @@
   <div class="overlay" id="overlay" onclick="closeSidebar()"></div>
 
   <div class="header">
-    <img src="https://github.com/mattscianna/mattscianna/blob/main/MENU.png?raw=true" alt="Menu Icon" class="menu-icon" onclick="toggleSidebar()" />
-    <img src="https://github.com/mattscianna/mattscianna/blob/main/MATTSCIANNA.png?raw=true" alt="Matt Scianna" class="logo" onclick="location.reload()" />
+    <img src="menu-icon.png" alt="Menu Icon" class="menu-icon" onclick="toggleSidebar()" />
+    <img src="your-logo.png" alt="Matt Scianna" class="logo" onclick="location.reload()" />
   </div>
 
   <div id="sidebar" class="sidebar">
