--- a/website/index.html
+++ b/website/index.html
@@ -75,7 +75,7 @@
   <div class="overlay" id="overlay" onclick="closeSidebar()"></div>
 
   <div class="header">
-    <img src="menu-icon.png" alt="Menu Icon" class="menu-icon" onclick="toggleSidebar()" />
+    <img src="https://github.com/mattscianna/mattscianna/blob/main/MENU.png?raw=true" alt="Menu Icon" class="menu-icon" onclick="toggleSidebar()" />
     <img src="your-logo.png" alt="Matt Scianna" class="logo" onclick="location.reload()" />
   </div>
 
