--- a/index.html
+++ b/index.html
@@ -6,13 +6,16 @@
   <title>Matt Scianna</title>
   <!-- Favicon Link -->
   <link rel="icon" href="https://github.com/mattscianna/mattscianna/blob/main/ms-logo.png?raw=true" type="image/png">
-<head>
-    
-  <!-- Importing Cardo font from Google Fonts -->
+
+  <!-- Importing Cardo and Graduate fonts from Google Fonts -->
   <link href="https://fonts.googleapis.com/css2?family=Cardo&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Graduate&display=swap" rel="stylesheet">
 
   <style>
+    /* styles here */
+  </style>
+</head>
+  
     body {
       font-family: 'Cardo', serif;
       background-color: #ffffff;
