--- a/website/index.html
+++ b/website/index.html
@@ -105,7 +105,7 @@
   <!-- Header -->
   <div class="header">
     <img src="https://github.com/mattscianna/mattscianna/blob/main/MENU.png?raw=true" alt="Menu Icon" class="menu-icon" onclick="toggleSidebar()" />
-    <img src="your-logo.png" alt="Matt Scianna" class="logo" onclick="location.reload()" />
+    <img src="https://github.com/mattscianna/mattscianna/blob/main/MATTSCIANNA.png?raw=true" alt="Matt Scianna" class="logo" onclick="location.reload()" />
   </div>
 
   <!-- Sidebar -->
