--- a/website/index.html
+++ b/website/index.html
@@ -5,12 +5,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Matt Scianna</title>
 
-  <!-- Favicon -->
-  <link rel="icon" href="https://github.com/mattscianna/mattscianna/blob/main/ms-logo.png?raw=true" type="image/png">
-
-  <!-- Fonts -->
+  <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css2?family=Cardo&display=swap" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css2?family=Graduate&display=swap" rel="stylesheet">
 
   <style>
     body {
@@ -19,15 +15,18 @@
       background-color: white;
     }
 
-    /* Header Layout */
     .header {
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      height: 80px;
       position: relative;
-      background-color: white;
-      padding: 0 20px;
+      height: 100px;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+    }
+
+    .logo {
+      margin-top: 20px;
+      height: 60px;
+      cursor: pointer;
     }
 
     .menu-icon {
@@ -35,21 +34,15 @@
       left: 20px;
       top: 50%;
       transform: translateY(-50%);
-      width: 35px;
+      width: 40px;
       height: auto;
       cursor: pointer;
     }
 
-    .logo {
-      height: 40px;
-      cursor: pointer;
-    }
-
-    /* Sidebar Styles */
     .sidebar {
       position: fixed;
       top: 0;
-      left: -250px;
+      left: -100%;
       width: 250px;
       height: 100%;
       background-color: white;
@@ -57,12 +50,14 @@
       text-transform: uppercase;
       padding: 20px;
       box-shadow: 2px 0 5px rgba(0,0,0,0.1);
-      transition: left 0.3s ease;
+      transition: left 0.3s ease, visibility 0.3s ease;
       z-index: 1000;
+      visibility: hidden;
     }
 
     .sidebar.open {
       left: 0;
+      visibility: visible;
     }
 
     .overlay {
@@ -80,35 +75,33 @@
       display: block;
     }
 
-    /* Responsive Tweaks for Mobile */
+    /* Responsive adjustments */
     @media screen and (max-width: 600px) {
-      .header {
-        height: 70px;
-        padding: 0 15px;
+      .logo {
+        height: 45px;
+        margin-top: 10px;
       }
 
       .menu-icon {
-        width: 30px;
+        width: 32px;
+        left: 16px;
       }
 
-      .logo {
-        height: 30px;
+      .header {
+        height: 80px;
       }
     }
   </style>
 </head>
 <body>
 
-  <!-- Overlay for sidebar -->
   <div class="overlay" id="overlay" onclick="closeSidebar()"></div>
 
-  <!-- Header -->
   <div class="header">
-    <img src="https://github.com/mattscianna/mattscianna/blob/main/MENU.png?raw=true" alt="Menu Icon" class="menu-icon" onclick="toggleSidebar()" />
-    <img src="https://github.com/mattscianna/mattscianna/blob/main/MATTSCIANNA.png?raw=true" alt="Matt Scianna" class="logo" onclick="location.reload()" />
+    <img src="menu-icon.png" alt="Menu Icon" class="menu-icon" onclick="toggleSidebar()" />
+    <img src="your-logo.png" alt="Matt Scianna" class="logo" onclick="location.reload()" />
   </div>
 
-  <!-- Sidebar -->
   <div id="sidebar" class="sidebar">
     <p>Home</p>
     <p>Shop</p>
@@ -116,7 +109,6 @@
     <p>About</p>
   </div>
 
-  <!-- Script for sidebar -->
   <script>
     function toggleSidebar() {
       const sidebar = document.getElementById('sidebar');
