--- a/website/index.html
+++ b/website/index.html
@@ -5,6 +5,13 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Matt Scianna</title>
 
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Matt Scianna</title>
+
   <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css2?family=Cardo&display=swap" rel="stylesheet">
 
@@ -13,6 +20,7 @@
       margin: 0;
       font-family: 'Cardo', serif;
       background-color: white;
+      overflow-x: hidden;
     }
 
     .header {
@@ -24,8 +32,7 @@
     }
 
     .logo {
-      margin-top: 20px;
-      height: 60px;
+      height: 50px; /* Smaller logo */
       cursor: pointer;
     }
 
@@ -34,7 +41,7 @@
       left: 20px;
       top: 50%;
       transform: translateY(-50%);
-      width: 40px;
+      width: 35px;
       height: auto;
       cursor: pointer;
     }
@@ -78,12 +85,11 @@
     /* Responsive adjustments */
     @media screen and (max-width: 600px) {
       .logo {
-        height: 45px;
-        margin-top: 10px;
+        height: 40px;
       }
 
       .menu-icon {
-        width: 32px;
+        width: 28px;
         left: 16px;
       }
 
